Finished app prototype

--- a/tic-tac-toe/src/index.css
+++ b/tic-tac-toe/src/index.css
@@ -3,6 +3,10 @@ body {
   margin: 20px;
 }
 
+h1 {
+  margin-top: 0px;
+}
+
 ol, ul {
   padding-left: 30px;
 }
@@ -21,15 +25,15 @@ ol, ul {
   background: #fff;
   border: 1px solid #999;
   float: left;
-  font-size: 24px;
+  font-size: 120px;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
+  line-height: 170px;
+  height: 170px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 170px;
 }
 
 .square:focus {
